# Learn-Cpp

./: .gitignore  CMakeLists.txt  README.md  pixi.toml
DOP/: DOP_vs_OOP.cpp  a.out
Smart_contatiner/: SmartContatiner.h  a.out  demo.cpp
build-release/: Makefile  cmake_install.cmake
build-release/cpp23_demos/: Makefile  cmake_install.cmake
build-release/dop_vs_oop/: Makefile  cmake_install.cmake  dop_vs_oop
build-release/hello_algo/: Makefile  cmake_install.cmake
build-release/hft_demos/: Makefile  cmake_install.cmake
build-release/para_math/: Makefile  cmake_install.cmake
build-release/smart_container/: Makefile  cmake_install.cmake
cpp23_demos/: CMakeLists.txt  Makefile
cpp23_demos/src/: SPSC.cpp  atomic_ref.cpp  bit.cpp  concepts.cpp  expected.cpp  mdspan.cpp  print.cpp  range_views.cpp  ref.cpp
dop_vs_oop/: CMakeLists.txt  DOP_vs_OOP.cpp
hello_algo/: CMakeLists.txt  search.cpp  sort.cpp
hft_demos/: 01_thread_safe_queue.cpp  02_lockfree_spsc_ring_buffer.cpp  03_thread_pool.cpp  04_reader_writer_lock.cpp  05_lockfree_stack.cpp  06_fixed_size_memory_pool.cpp  07_slab_allocator.cpp  08_lru_cache.cpp  09_rate_limiter_token_bucket.cpp  10_timer_wheel.cpp  11_bounded_blocking_queue.cpp  12_waitfree_spsc_queue.cpp  13_cache_friendly_hash_table.cpp  14_tcp_echo_server_nonblocking.cpp  15_event_loop_epoll_kqueue.cpp  16_async_logger.cpp  17_false_sharing.cpp  18_hot_loop_optimization.cpp  19_market_data_message_queue.cpp  20_order_book_matching_engine.cpp  21_fork_mmap_ipc_sync.cpp  22_context_switch_threads_vs_processes.cpp  23_working_set_plot.py  23_working_set_results.csv  23_working_set_tlb_huge_pages.cpp  CMakeLists.txt  README.md
high_level_cpp/: mordern_cpp23_demo.cpp
low_level_cpp/: lowlevel_cpp23_demo.cpp
para_math/: CMakeLists.txt  lib.h  main.cpp  main2.cpp
smart_container/: CMakeLists.txt  demo.cpp
